# lancedb

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.win
.github/workflows/: R-CMD-check.yaml
R/: aaa.R  arrow-ingest.R  backend.R  connect.R  connection.R  dplyr_methods.R  extendr-wrappers.R  info.R  lazy.R  table.R  translate.R  utils.R  zzz.R
man/: arrange.lancedb_lazy.Rd  collect.lancedb_lazy.Rd  dot-backend_call.Rd  dot-ensure_python.Rd  dot-onLoad.Rd  dot-py_lancedb.Rd  dot-py_pkg_versions.Rd  dot-py_try_method.Rd  dot-rt_add.Rd  dot-rt_build_query.Rd  dot-rt_connect.Rd  dot-rt_create_table.Rd  dot-rt_open_table.Rd  dot-rt_search.Rd  filter.lancedb_lazy.Rd  grapes-or-or-grapes.Rd  lancedb-package.Rd  lancedb_add.Rd  lancedb_add_columns.Rd  lancedb_alter_columns.Rd  lancedb_backend.Rd  lancedb_checkout.Rd  lancedb_checkout_latest.Rd  lancedb_cleanup_old_versions.Rd  lancedb_compact_files.Rd  lancedb_config.Rd  lancedb_connect.Rd  lancedb_count_rows.Rd  lancedb_create_index.Rd  lancedb_create_table.Rd  lancedb_delete.Rd  lancedb_drop_columns.Rd  lancedb_drop_index.Rd  lancedb_drop_table.Rd  lancedb_fast_search.Rd  lancedb_fts_search.Rd  lancedb_head.Rd  lancedb_hybrid_search.Rd  lancedb_info.Rd  lancedb_list_indices.Rd  (+27 more)
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs  runtime.rs
tests/: testthat.R
tests/testthat/: helper_skip.R  test-args.R  test-backend-option.R  test-config.R  test-connect-table.R  test-indexing.R  (+9 more)
vignettes/: Getting-Started-vignette.Rmd  getting-started.Rmd
